tests/ui/structs/struct-fields-hints.stderr
error[E0560]: struct `A` has no field named `bar`
  --> $DIR/struct-fields-hints.rs:10:9
   |
LL |         bar : 42,
   |         ^^^ unknown field
   |
help: a field with a similar name exists
   |
LL -         bar : 42,
LL +         car : 42,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0560`.
